--- a/backup.html
+++ b/backup.html
@@ -367,37 +367,54 @@
             </div>
           </div> 
           {% for question in questions %}
-            <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2">
+            <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2"">
               <div class="flex gap-4 items-start p-5 justify-between">
                 <div class="flex gap-4">
                   <input type="checkbox" class='question_check size-4' name='question_check' id="{{question.id}}" class="size-4">
                   <label for="{{question.id}}" class="font-semibold text-[18px]">Q. {{forloop.counter}}</label>
                 </div>
-                <p class="text-slate-500">Points: 1</p>
+                <p class="text-slate-500">Points: 
+                  
+                  {% if question.correct_op == question.selected_option %}
+                    1
+                  {% else %}
+                    0
+                  {% endif %}
+
+                </p>
               </div>
               <div class="ml-12 mb-4">
                   {{question.question|safe}}
               </div>
               <div class='flex flex-col gap-2 mb-6'>
-                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 1%}bg-green-300 bg-opacity-25 rounded-md {%endif%} break-words p-3">
+                <div class="flex gap-4 ml-16 items-start
+                             {% if question.correct_op == 1%} 
+                                bg-green-300 bg-opacity-25 rounded-md 
+                              {% else %}
+                                {% if question.selected_option == 1 %}
+                                  bg-red-400 bg-opacity-25 rounded-md
+                                {% endif %}
+                              {%endif%}
+                            break-words p-3"
+                >
                   <input type="checkbox" id="op1" class="size-4" disabled>
                     <label for="op1" class="text-[18px] leading-6">
                         {{question.op1|safe}}
                     </label>
                 </div>
-                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 2%}bg-green-300 bg-opacity-25 rounded-md {%endif%} break-words p-3">
+                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 2%}bg-green-300 bg-opacity-25 rounded-md {% else %} {% if question.selected_option == 2 %}bg-red-400 bg-opacity-25 rounded-md{% endif %} {%endif%} break-words p-3">
                   <input type="checkbox" id="op2" class="size-4" disabled>
                   <label for="op2" class="text-[18px] leading-6">
                       {{question.op2|safe}}
                   </label>
                 </div>
-                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 3%}bg-green-300 bg-opacity-25 rounded-md {%endif%} break-words p-3">
+                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 3 %}bg-green-300 bg-opacity-25 rounded-md {% else %} {% if question.selected_option == 3 %}bg-red-400 bg-opacity-25 rounded-md{% endif %}  {%endif%} break-words p-3">
                   <input type="checkbox" id="op3" class="size-4" disabled>
                     <label for="op3" class="text-[18px] leading-6">
                         {{question.op3|safe}}
                     </label>
                 </div>
-                <div class="flex gap-4 ml-16 items-start break-words {% if question.correct_op == 4%}bg-green-300 bg-opacity-25 rounded-md {%endif%} p-3">
+                <div class="flex gap-4 ml-16 items-start break-words {% if question.correct_op == 4 %}bg-green-300 bg-opacity-25 rounded-md {% else %} {% if question.selected_option == 4 %} bg-red-400 bg-opacity-25 rounded-md{% endif %} {%endif%} p-3">
                   <input type="checkbox" id="op4" class="size-4" disabled>
                     <label for="op4" class="text-[18px] leading-6">
                         {{question.op4|safe}}
@@ -520,7 +537,7 @@
     </div>
   </div>
   </div>
-    <script src='{% static "portal/questions-manager.js" %}'></script>
+    {% comment %} <script src='{% static "portal/questions-manager.js" %}'></script> {% endcomment %}
     <script>
       function changeLoc(){
         window.location.href="{% url 'add-question' tests.id %}"
